tests/snapshots/integration__meta__dotenv.snap
---
source: tests/meta.rs
expression: data
---
RUN
prog

# OUTPUT
_argc_load_dotenv() {
    local env_vars=""
    for env_file in "$@"; do
        if [[ -f "$env_file" ]]; then
            while IFS= read -r line || [[ -n "$line" ]]; do
                if [[ -z "$line" ]] || [[ "$line" =~ ^[[:space:]]*# ]]; then
                    continue
                fi
                
                if [[ "$line" =~ ^[[:space:]]*([a-zA-Z_][a-zA-Z0-9_]*)=(.*)$ ]]; then
                    local key="${BASH_REMATCH[1]}"
                    local value="${BASH_REMATCH[2]}"
                    
                    if [[ "$value" =~ ^\"(.*)\"(.*)$ ]]; then
                        value="${BASH_REMATCH[1]}"
                    elif [[ "$value" =~ ^\'(.*)\'(.*)$ ]]; then
                        value="${BASH_REMATCH[1]}"
                    else
                        if [[ "$value" =~ ^([^#]*[^[:space:]])[[:space:]]+#.*$ ]]; then
                            value="${BASH_REMATCH[1]}"
                        elif [[ "$value" =~ ^([^#]*)[[:space:]]*$ ]]; then
                            value="${BASH_REMATCH[1]}"
                        fi
                        value="$(echo "$value" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')"
                    fi
                    
                    if [[ -z "${!key+x}" ]]; then
                        env_vars="$env_vars $key=$value"
                    fi
                fi
            done < "$env_file"
        fi
    done
    if [[ -n "$env_vars" ]]; then
        eval "export $env_vars"
    fi
}

_argc_load_dotenv .env
argc__args=( prog )
argc__positionals=(  )

# BUILD_OUTPUT
argc__args=([0]="prog")
argc__positionals=()
